--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://RakShaDhami.github.io/ciseco",
+  "homepage": "./",
   "name": "ciseco",
   "version": "0.1.0",
   "private": true,
